# agent-center-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent-analysis-worker  Dockerfile.face-assessment-analysis-worker  README.md  alembic.ini  docker-compose.workers.yml  docker-compose.yml  main.py  pyproject.toml
.run/: Dockerfile.run.xml  agent-analysis-worker_Dockerfile.run.xml  face-assessment-analysis-worker_Dockerfile.run.xml
docker/: nginx.conf  start.sh  supervisord.conf
docs/: docker-deployment.md  java-sdk-design.md  worker-docker-deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts  services.ts
frontend/src/composables/: useMonitorWebSocket.ts
frontend/src/router/: index.ts
frontend/src/stores/: platform.ts
frontend/src/views/: ApiDocs.vue  Dashboard.vue  Logs.vue  Services.vue
migrations/: env.py
migrations/versions/: 20260329_2300_initial_schema.py
sdk/: __init__.py  client.py  models.py  mq_client.py  pyproject.toml
sdk/langchain/: __init__.py  agent.py
src/: __init__.py  main.py
src/agent_platform/: __init__.py  app.py  ws.py
src/agent_platform/api/: __init__.py  app.py
src/agent_platform/models/: __init__.py  schemas.py
src/agent_platform/websocket/: __init__.py  monitor.py  ws.py
src/common/: __init__.py
src/common/database/: __init__.py  base.py  crud.py  models.py
src/common/mq/: __init__.py  connection_manager.py  heartbeat_consumer.py  models.py  result_consumer.py  task_producer.py
src/common/pool/: __init__.py  manager.py
workers/: Dockerfile  pyproject.toml  start-worker.sh
workers/agent_analysis/: .env.example  README.md  agent.py  pyproject.toml
workers/face_assessment_analysis/: .env.example  README.md  agent.py  pyproject.toml
workers/test_worker/: __init__.py  agent.py  tools.py
workers/weather_agent/: .env.example  agent.py
